# git-Agent

./: .gitattributes  ABOUT.md  AGENTS.md  Cargo.toml  README.md  design-qa.md  dev.ps1
.github/workflows/: build.yml
docs/: interactive-rebase-plan.md
docs/superpowers/plans/: 2026-07-10-create-patch-dialog.md
docs/superpowers/specs/: 2026-07-10-create-patch-dialog-design.md
installer/windows/: git-agent.iss
scripts/: dev.ps1
src/: app.rs  dialog.rs  diff_tool.rs  git.rs  graph.rs  i18n.rs  lib.rs  main.rs  merge_tool.rs  patch.rs  theme.rs  updater.rs
tests/: dev_script_tests.rs  diff_tool_tests.rs  merge_tool_tests.rs
