[package]
name = "git-agent"
version = "1.0.4"
edition = "2024"

[dependencies]
anyhow = "1.0"
eframe = "0.31"
egui_extras = { version = "0.31", features = ["svg"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
ureq = { version = "2.12", features = ["json"] }
