[package]
name = "git-agent"
version = "1.0.4"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
eframe = "0.31"
egui_extras = { version = "0.31", features = ["svg"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
ureq = { version = "2.12", features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
